--- a/front/src/app/home/home.page.html
+++ b/front/src/app/home/home.page.html
@@ -1,20 +1,37 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+        Youtube downloader
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ion-grid fixed style="height: 100vh;">
+        <ion-row class="ion-align-items-center" style="height: 100vh;">
+            <ion-col size-lg="6" offset-lg="3" size-md="10" offset-md="1">
+                <ion-card>
+                    <ion-item lines="none">
+                        <img src="assets/logo.png" alt="Youtube downloader logo" />
+                    </ion-item>
+                    <ion-card-content>
+                        <!-- Searchbar with cancel button always shown -->
+                        <ion-searchbar showCancelButton="focus"></ion-searchbar>
+                        <ion-item lines="none">
+                            <ion-segment>
+                                <ion-segment-button layout="icon-start">
+                                    <ion-label>MP3</ion-label>
+                                    <ion-icon name="musical-notes"></ion-icon>
+                                </ion-segment-button>
+                                <ion-segment-button layout="icon-start">
+                                    <ion-label>MP4</ion-label>
+                                    <ion-icon name="videocam"></ion-icon>
+                                </ion-segment-button>
+                            </ion-segment>
+                        </ion-item>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
