--- a/front/src/app/home/home.page.html
+++ b/front/src/app/home/home.page.html
@@ -19,7 +19,7 @@
                         <ion-row class="ion-align-items-center">
                             <ion-col size="9">
                                 <!-- Searchbar with cancel button always shown -->
-                                <ion-searchbar showCancelButton="focus"></ion-searchbar>
+                                <ion-searchbar [(ngModel)]="videoInfo.url" showCancelButton="focus"></ion-searchbar>
                             </ion-col>
                             <ion-col size="3">
                                 <ion-button size="small" (click)="isDownloadButtonClicked = !isDownloadButtonClicked; downloadYoutubeVideo()">
@@ -30,12 +30,12 @@
                         </ion-row>
                     </ion-toolbar>
                         <ion-item lines="none">
-                            <ion-segment value="format.MP3">
-                                <ion-segment-button layout="icon-start" value="format.MP3">
+                            <ion-segment [value]="format.MP3" (ionChange)="videoFormatChanged($event)">
+                                <ion-segment-button layout="icon-start" [value]="format.MP3">
                                     <ion-label>MP3</ion-label>
                                     <ion-icon name="musical-notes"></ion-icon>
                                 </ion-segment-button>
-                                <ion-segment-button layout="icon-start" value="format.MP4">
+                                <ion-segment-button layout="icon-start" [value]="format.MP4">
                                     <ion-label>MP4</ion-label>
                                     <ion-icon name="videocam"></ion-icon>
                                 </ion-segment-button>
