⚡ Updated youtube download video functionality

--- a/front/src/app/home/home.page.html
+++ b/front/src/app/home/home.page.html
@@ -22,9 +22,9 @@
                                 <ion-searchbar [(ngModel)]="videoInfo.url" showCancelButton="focus"></ion-searchbar>
                             </ion-col>
                             <ion-col size="3">
-                                <ion-button size="small" (click)="isDownloadButtonClicked = !isDownloadButtonClicked; downloadYoutubeVideo()">
-                                    <ion-icon slot="start" [name]="isDownloadButtonClicked ? 'cloud-download' : 'film'"></ion-icon>
-                                    {{ isDownloadButtonClicked ? 'Download' : 'Convert'}}
+                                <ion-button size="small" (click)="downloadYoutubeVideo()">
+                                    <ion-icon slot="start" name="cloud-download"></ion-icon>
+                                    Download
                                 </ion-button>
                             </ion-col>
                         </ion-row>
