--- a/front/src/app/home/home.page.html
+++ b/front/src/app/home/home.page.html
@@ -19,7 +19,8 @@
                         <ion-row class="ion-align-items-center">
                             <ion-col size="9">
                                 <!-- Searchbar with cancel button always shown -->
-                                <ion-searchbar [(ngModel)]="videoInfo.url" showCancelButton="focus"></ion-searchbar>
+                                <ion-searchbar [(ngModel)]="videoInfo.url" showCancelButton="focus"
+                                placeholder="https://www.youtube.com/watch?v=LKwmdv39Rks"></ion-searchbar>
                             </ion-col>
                             <ion-col size="3">
                                 <ion-button size="small" (click)="downloadYoutubeVideo()">
