⚡ Added isValidYouTubeVideoUrl method

--- a/front/src/app/home/home.page.html
+++ b/front/src/app/home/home.page.html
@@ -21,12 +21,16 @@
                                 <!-- Searchbar with cancel button always shown -->
                                 <ion-searchbar [(ngModel)]="videoInfo.url" showCancelButton="focus"
                                 placeholder="https://www.youtube.com/watch?v=LKwmdv39Rks"></ion-searchbar>
+                                <ion-item *ngIf="videoInfo.url !== '' && !isValidYouTubeVideoUrl(videoInfo.url)" lines="none" class="error-message">
+                                    <ion-label>Wrong youtube video url</ion-label>
+                                </ion-item>
                             </ion-col>
                             <ion-col size="3">
                                 <ion-button size="small" (click)="downloadYoutubeVideo()">
                                     <ion-icon slot="start" name="cloud-download"></ion-icon>
                                     Download
                                 </ion-button>
+                                <ion-item *ngIf="videoInfo.url !== '' && !isValidYouTubeVideoUrl(videoInfo.url)"></ion-item>
                             </ion-col>
                         </ion-row>
                     </ion-toolbar>
