--- a/front/src/app/home/home.page.scss
+++ b/front/src/app/home/home.page.scss
@@ -1,3 +1,16 @@
 ion-item img {
   margin: auto;
 }
+
+
+.error-message {
+  min-height: 2.2rem;
+  ion-label {
+      margin: 2px 0;
+      font-size: 60%;
+      color: #EE5C5C;
+  }
+  .item-inner {
+      border-bottom: 0;
+  }
+}
