🐛 Fixed linter errors

--- a/front/src/app/home/home.page.html
+++ b/front/src/app/home/home.page.html
@@ -35,12 +35,12 @@
                         </ion-row>
                     </ion-toolbar>
                         <ion-item lines="none">
-                            <ion-segment [value]="format.MP3" (ionChange)="videoFormatChanged($event)">
-                                <ion-segment-button layout="icon-start" [value]="format.MP3">
+                            <ion-segment [value]="format.mp3" (ionChange)="videoFormatChanged($event)">
+                                <ion-segment-button layout="icon-start" [value]="format.mp3">
                                     <ion-label>MP3</ion-label>
                                     <ion-icon name="musical-notes"></ion-icon>
                                 </ion-segment-button>
-                                <ion-segment-button layout="icon-start" [value]="format.MP4">
+                                <ion-segment-button layout="icon-start" [value]="format.mp4">
                                     <ion-label>MP4</ion-label>
                                     <ion-icon name="videocam"></ion-icon>
                                 </ion-segment-button>
