--- a/front/src/app/home/home.page.html
+++ b/front/src/app/home/home.page.html
@@ -26,8 +26,8 @@
                                 </ion-item>
                             </ion-col>
                             <ion-col size="3">
-                                <ion-button size="small" (click)="downloadYoutubeVideo()" [disabled]="videoInfo.url === '' || !isValidYouTubeVideoUrl(videoInfo.url)">
-                                    <ion-icon slot="start" name="cloud-download"></ion-icon>
+                                <ion-button size="small" (click)="startDownloadingAnimation(); downloadYoutubeVideo()" [disabled]="videoInfo.url === '' || !isValidYouTubeVideoUrl(videoInfo.url) || isDownloadStarted">
+                                    <ion-icon #downloadingIcon slot="start" [name]="isDownloadStarted ? 'reload' : 'cloud-download'"></ion-icon>
                                     {{ 'pages.home.buttonDownload' | transloco }}
                                 </ion-button>
                                 <ion-item *ngIf="videoInfo.url !== '' && !isValidYouTubeVideoUrl(videoInfo.url)"></ion-item>
