[Audit Lighthouse] ✅ Image elements do not have explicit width and height

--- a/front/src/app/home/home.page.html
+++ b/front/src/app/home/home.page.html
@@ -12,7 +12,7 @@
             <ion-col size-lg="8" offset-lg="2" size-md="10" offset-md="1">
                 <ion-card>
                     <ion-item lines="none">
-                        <img src="assets/logo.png" alt="Youtube downloader logo" />
+                        <img src="assets/logo.png" width="256" height="143" alt="Youtube downloader logo" />
                     </ion-item>
                     <ion-card-content>
                         <ion-toolbar>
