Closes #9: ⚡ Adjust dark theme on the front end

--- a/front/src/theme/variables.scss
+++ b/front/src/theme/variables.scss
@@ -84,26 +84,26 @@
    */
 
   body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
+    --ion-color-primary: #c62828;
+    --ion-color-primary-rgb: 198,40,40;
     --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-contrast-rgb: 255, 255, 255;
+    --ion-color-primary-shade: #ae2323;
+    --ion-color-primary-tint: #cc3e3e;
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
+    --ion-color-secondary: #2F4858;
+    --ion-color-secondary-rgb: 47,72,88;
     --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+    --ion-color-secondary-contrast-rgb: 255, 255, 255;
+    --ion-color-secondary-shade: #293f4d;
+    --ion-color-secondary-tint: #445a69;
 
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
+    --ion-color-tertiary: #5D4882;
+    --ion-color-tertiary-rgb: 93,72,130;
     --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
+    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
+    --ion-color-tertiary-shade: #523f72;
+    --ion-color-tertiary-tint: #6d5a8f;
 
     --ion-color-success: #2fdf75;
     --ion-color-success-rgb: 47,223,117;
