✨ Added buy me a coffee button

--- a/front/src/app/home/home.page.html
+++ b/front/src/app/home/home.page.html
@@ -3,6 +3,11 @@
         <ion-title>
             {{ 'pages.home.title' | transloco }}
         </ion-title>
+        <ion-buttons slot="end">
+            <ion-button fill="clear" (click)="onClickBuyMeCoffeeHandler()">
+                <img src="https://www.buymeacoffee.com/assets/img/custom_images/yellow_img.png" alt="Buy Me A Coffee" style="width:100px">
+            </ion-button>
+        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
