⚡ Updated info component

--- a/front/src/app/components/youtube-downloader-info/youtube-downloader-info/youtube-downloader-info.component.html
+++ b/front/src/app/components/youtube-downloader-info/youtube-downloader-info/youtube-downloader-info.component.html
@@ -1,3 +1,62 @@
-<p>
-  youtube-downloader-info works!
-</p>
+<ion-grid fixed>
+  <ion-row class="ion-align-items-center">
+      <ion-col size-lg="8" offset-lg="2" size-md="10" offset-md="1">
+        <ion-card>
+          <ion-card-content>
+            <ion-row class="ion-align-items-center">
+              <ion-col size="4" class="ion-align-self-center">
+                <ion-icon name="airplane-outline" color="primary" style="zoom: 4.0;"></ion-icon>
+                <ion-label>
+                  <h2>
+                    Fast YouTube Video Downloader to MP3 / MP4 files
+                  </h2>
+                </ion-label>
+              </ion-col>
+              <ion-col size="4" class="ion-align-self-center">
+                <ion-icon name="card-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                <ion-label>
+                  <h2>
+                    Free Youtube Video Downloader
+                  </h2>
+                </ion-label>
+              </ion-col>
+              <ion-col size="4" class="ion-align-self-center">
+                <ion-icon name="desktop-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                <ion-label>
+                  <h2>
+                    Download Youtube videos without without the need to install any software
+                  </h2>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row class="ion-align-items-center">
+              <ion-col size="4" class="ion-align-self-center">
+                <ion-icon name="search-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                <ion-label>
+                  <h2>
+                    Select a Youtube Video
+                  </h2>
+                </ion-label>
+              </ion-col>
+              <ion-col size="4" class="ion-align-self-center">
+                <ion-icon name="clipboard-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                <ion-label>
+                  <h2>
+                    Paste the Youtube URL link
+                  </h2>
+                </ion-label>
+              </ion-col>
+              <ion-col size="4" class="ion-align-self-center">
+                <ion-icon name="cloud-download-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                <ion-label>
+                  <h2>
+                    Download Youtube video to MP3 / MP4 file
+                  </h2>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+  </ion-row>
+</ion-grid>
