--- a/front/src/app/components/youtube-downloader-info/youtube-downloader-info/youtube-downloader-info.component.html
+++ b/front/src/app/components/youtube-downloader-info/youtube-downloader-info/youtube-downloader-info.component.html
@@ -1,57 +1,78 @@
 <ion-grid fixed>
+  <ion-row>
+    <ion-col size="12">
+      <ion-item lines="none">
+        <ion-label class="ion-text-center">
+          <h1>Information about the Youtube Downloader</h1>
+        </ion-label>
+      </ion-item>
+    </ion-col>
+  </ion-row>
   <ion-row class="ion-align-items-center">
-      <ion-col size-lg="8" offset-lg="2" size-md="10" offset-md="1">
+      <ion-col size="12">
         <ion-card>
           <ion-card-content>
-            <ion-row class="ion-align-items-center">
-              <ion-col size="4" class="ion-align-self-center">
+            <ion-row>
+              <ion-col size="4" class="ion-text-center">
                 <ion-icon name="airplane-outline" color="primary" style="zoom: 4.0;"></ion-icon>
                 <ion-label>
                   <h2>
-                    Fast YouTube Video Downloader to MP3 / MP4 files
+                    Fast YouTube Video Downloader to MP3 | MP4 files
                   </h2>
+                  <br>
+                  <p>Undoubtedly the fastest mp3 / mp4 video downloader you can find on the Internet.</p>
                 </ion-label>
               </ion-col>
-              <ion-col size="4" class="ion-align-self-center">
+              <ion-col size="4" class="ion-text-center">
                 <ion-icon name="card-outline" color="primary" style="zoom: 4.0"></ion-icon>
                 <ion-label>
                   <h2>
-                    Free Youtube Video Downloader
+                    Free and ad-free Youtube Video Downloader
                   </h2>
+                  <br>
+                  <p>Free of charge and without annoying advertisements appearing with every download.</p>
                 </ion-label>
               </ion-col>
-              <ion-col size="4" class="ion-align-self-center">
+              <ion-col size="4" class="ion-text-center">
                 <ion-icon name="desktop-outline" color="primary" style="zoom: 4.0"></ion-icon>
                 <ion-label>
                   <h2>
-                    Download Youtube videos without without the need to install any software
+                    Download Youtube videos without the need to install any software
                   </h2>
+                  <br>
+                  <p>No need to log in, no need to share your personal information,...</p>
                 </ion-label>
               </ion-col>
             </ion-row>
             <ion-row class="ion-align-items-center">
-              <ion-col size="4" class="ion-align-self-center">
+              <ion-col size="4" class="ion-text-center">
                 <ion-icon name="search-outline" color="primary" style="zoom: 4.0"></ion-icon>
                 <ion-label>
                   <h2>
                     Select a Youtube Video
                   </h2>
+                  <br>
+                  <p>Search for your video on Youtube and copy its URL link.</p>
                 </ion-label>
               </ion-col>
-              <ion-col size="4" class="ion-align-self-center">
+              <ion-col size="4" class="ion-text-center">
                 <ion-icon name="clipboard-outline" color="primary" style="zoom: 4.0"></ion-icon>
                 <ion-label>
                   <h2>
                     Paste the Youtube URL link
                   </h2>
+                  <br>
+                  <p>Once you have copied the URL link, paste it into the search input of the downloader.</p>
                 </ion-label>
               </ion-col>
-              <ion-col size="4" class="ion-align-self-center">
+              <ion-col size="4" class="ion-text-center">
                 <ion-icon name="cloud-download-outline" color="primary" style="zoom: 4.0"></ion-icon>
                 <ion-label>
                   <h2>
-                    Download Youtube video to MP3 / MP4 file
+                    Download Youtube video to MP3 | MP4 file
                   </h2>
+                  <br>
+                  <p>Click the download button to start downloading your video in mp3 | mp4 format.</p>
                 </ion-label>
               </ion-col>
             </ion-row>
