Closes #11: 🌐  Added translation messages

--- a/front/src/app/components/youtube-downloader-info/youtube-downloader-info/youtube-downloader-info.component.html
+++ b/front/src/app/components/youtube-downloader-info/youtube-downloader-info/youtube-downloader-info.component.html
@@ -2,8 +2,8 @@
   <ion-row>
     <ion-col size="12">
       <ion-item lines="none">
-        <ion-label class="ion-text-center">
-          <h1>Information about the Youtube Downloader</h1>
+        <ion-label class="ion-text-center ion-text-wrap">
+          <h1>{{ 'components.info.title' | transloco }}</h1>
         </ion-label>
       </ion-item>
     </ion-col>
@@ -17,30 +17,30 @@
                 <ion-icon name="airplane-outline" color="primary" style="zoom: 4.0;"></ion-icon>
                 <ion-label>
                   <h2>
-                    Fast YouTube Video Downloader to MP3 | MP4 files
+                    {{ 'components.info.features.fastTitle' | transloco }}
                   </h2>
                   <br>
-                  <p>Undoubtedly the fastest mp3 / mp4 video downloader you can find on the Internet.</p>
+                  <p>{{ 'components.info.features.fastParagraph' | transloco }}</p>
                 </ion-label>
               </ion-col>
               <ion-col size="4" class="ion-text-center">
                 <ion-icon name="card-outline" color="primary" style="zoom: 4.0"></ion-icon>
                 <ion-label>
                   <h2>
-                    Free and ad-free Youtube Video Downloader
+                    {{ 'components.info.features.freeTitle' | transloco }}
                   </h2>
                   <br>
-                  <p>Free of charge and without annoying advertisements appearing with every download.</p>
+                  <p>{{ 'components.info.features.freeParagraph' | transloco }}</p>
                 </ion-label>
               </ion-col>
               <ion-col size="4" class="ion-text-center">
                 <ion-icon name="desktop-outline" color="primary" style="zoom: 4.0"></ion-icon>
                 <ion-label>
                   <h2>
-                    Download Youtube videos without the need to install any software
+                    {{ 'components.info.features.noSoftwareTitle' | transloco }}
                   </h2>
                   <br>
-                  <p>No need to log in, no need to share your personal information,...</p>
+                  <p>{{ 'components.info.features.noSoftwareParagraph' | transloco }}</p>
                 </ion-label>
               </ion-col>
             </ion-row>
@@ -49,30 +49,30 @@
                 <ion-icon name="search-outline" color="primary" style="zoom: 4.0"></ion-icon>
                 <ion-label>
                   <h2>
-                    Select a Youtube Video
+                    {{ 'components.info.steps.selectVideoTitle' | transloco }}
                   </h2>
                   <br>
-                  <p>Search for your video on Youtube and copy its URL link.</p>
+                  <p>{{ 'components.info.steps.selectVideoParagraph' | transloco }}</p>
                 </ion-label>
               </ion-col>
               <ion-col size="4" class="ion-text-center">
                 <ion-icon name="clipboard-outline" color="primary" style="zoom: 4.0"></ion-icon>
                 <ion-label>
                   <h2>
-                    Paste the Youtube URL link
+                    {{ 'components.info.steps.pasteLinkTitle' | transloco }}
                   </h2>
                   <br>
-                  <p>Once you have copied the URL link, paste it into the search input of the downloader.</p>
+                  <p>{{ 'components.info.steps.pasteLinkParagraph' | transloco }}</p>
                 </ion-label>
               </ion-col>
               <ion-col size="4" class="ion-text-center">
                 <ion-icon name="cloud-download-outline" color="primary" style="zoom: 4.0"></ion-icon>
                 <ion-label>
                   <h2>
-                    Download Youtube video to MP3 | MP4 file
+                    {{ 'components.info.steps.downloadTitle' | transloco }}
                   </h2>
                   <br>
-                  <p>Click the download button to start downloading your video in mp3 | mp4 format.</p>
+                  <p>{{ 'components.info.steps.downloadParagraph' | transloco }}</p>
                 </ion-label>
               </ion-col>
             </ion-row>
