--- a/front/src/app/components/youtube-downloader-info/youtube-downloader-info/youtube-downloader-info.component.html
+++ b/front/src/app/components/youtube-downloader-info/youtube-downloader-info/youtube-downloader-info.component.html
@@ -1,83 +1,86 @@
-<ion-grid fixed>
-  <ion-row>
-    <ion-col size="12">
-      <ion-item lines="none">
-        <ion-label class="ion-text-center ion-text-wrap">
-          <h1>{{ 'components.info.title' | transloco }}</h1>
-        </ion-label>
-      </ion-item>
-    </ion-col>
-  </ion-row>
-  <ion-row class="ion-align-items-center">
+<ion-content>
+  <ion-grid fixed>
+    <ion-row>
       <ion-col size="12">
-        <ion-card>
-          <ion-card-content>
-            <ion-row>
-              <ion-col size="4" class="ion-text-center">
-                <ion-icon name="airplane-outline" color="primary" style="zoom: 4.0;"></ion-icon>
-                <ion-label>
-                  <h2>
-                    {{ 'components.info.features.fastTitle' | transloco }}
-                  </h2>
-                  <br>
-                  <p>{{ 'components.info.features.fastParagraph' | transloco }}</p>
-                </ion-label>
-              </ion-col>
-              <ion-col size="4" class="ion-text-center">
-                <ion-icon name="card-outline" color="primary" style="zoom: 4.0"></ion-icon>
-                <ion-label>
-                  <h2>
-                    {{ 'components.info.features.freeTitle' | transloco }}
-                  </h2>
-                  <br>
-                  <p>{{ 'components.info.features.freeParagraph' | transloco }}</p>
-                </ion-label>
-              </ion-col>
-              <ion-col size="4" class="ion-text-center">
-                <ion-icon name="desktop-outline" color="primary" style="zoom: 4.0"></ion-icon>
-                <ion-label>
-                  <h2>
-                    {{ 'components.info.features.noSoftwareTitle' | transloco }}
-                  </h2>
-                  <br>
-                  <p>{{ 'components.info.features.noSoftwareParagraph' | transloco }}</p>
-                </ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row class="ion-align-items-center">
-              <ion-col size="4" class="ion-text-center">
-                <ion-icon name="search-outline" color="primary" style="zoom: 4.0"></ion-icon>
-                <ion-label>
-                  <h2>
-                    {{ 'components.info.steps.selectVideoTitle' | transloco }}
-                  </h2>
-                  <br>
-                  <p>{{ 'components.info.steps.selectVideoParagraph' | transloco }}</p>
-                </ion-label>
-              </ion-col>
-              <ion-col size="4" class="ion-text-center">
-                <ion-icon name="clipboard-outline" color="primary" style="zoom: 4.0"></ion-icon>
-                <ion-label>
-                  <h2>
-                    {{ 'components.info.steps.pasteLinkTitle' | transloco }}
-                  </h2>
-                  <br>
-                  <p>{{ 'components.info.steps.pasteLinkParagraph' | transloco }}</p>
-                </ion-label>
-              </ion-col>
-              <ion-col size="4" class="ion-text-center">
-                <ion-icon name="cloud-download-outline" color="primary" style="zoom: 4.0"></ion-icon>
-                <ion-label>
-                  <h2>
-                    {{ 'components.info.steps.downloadTitle' | transloco }}
-                  </h2>
-                  <br>
-                  <p>{{ 'components.info.steps.downloadParagraph' | transloco }}</p>
-                </ion-label>
-              </ion-col>
-            </ion-row>
-          </ion-card-content>
-        </ion-card>
+        <ion-item lines="none">
+          <ion-label class="ion-text-center ion-text-wrap">
+            <h1>{{ 'components.info.title' | transloco }}</h1>
+          </ion-label>
+          <ion-icon slot="end" name="close" (click)="dismissModal()"></ion-icon>
+        </ion-item>
       </ion-col>
-  </ion-row>
-</ion-grid>
+    </ion-row>
+    <ion-row class="ion-align-items-center">
+        <ion-col size="12">
+          <ion-card>
+            <ion-card-content>
+              <ion-row>
+                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                  <ion-icon name="airplane-outline" color="primary" style="zoom: 4.0;"></ion-icon>
+                  <ion-label>
+                    <h2>
+                      {{ 'components.info.features.fastTitle' | transloco }}
+                    </h2>
+                    <br>
+                    <p>{{ 'components.info.features.fastParagraph' | transloco }}</p>
+                  </ion-label>
+                </ion-col>
+                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                  <ion-icon name="card-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                  <ion-label>
+                    <h2>
+                      {{ 'components.info.features.freeTitle' | transloco }}
+                    </h2>
+                    <br>
+                    <p>{{ 'components.info.features.freeParagraph' | transloco }}</p>
+                  </ion-label>
+                </ion-col>
+                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                  <ion-icon name="desktop-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                  <ion-label>
+                    <h2>
+                      {{ 'components.info.features.noSoftwareTitle' | transloco }}
+                    </h2>
+                    <br>
+                    <p>{{ 'components.info.features.noSoftwareParagraph' | transloco }}</p>
+                  </ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row class="ion-align-items-center">
+                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                  <ion-icon name="search-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                  <ion-label>
+                    <h2>
+                      {{ 'components.info.steps.selectVideoTitle' | transloco }}
+                    </h2>
+                    <br>
+                    <p>{{ 'components.info.steps.selectVideoParagraph' | transloco }}</p>
+                  </ion-label>
+                </ion-col>
+                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                  <ion-icon name="clipboard-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                  <ion-label>
+                    <h2>
+                      {{ 'components.info.steps.pasteLinkTitle' | transloco }}
+                    </h2>
+                    <br>
+                    <p>{{ 'components.info.steps.pasteLinkParagraph' | transloco }}</p>
+                  </ion-label>
+                </ion-col>
+                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                  <ion-icon name="cloud-download-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                  <ion-label>
+                    <h2>
+                      {{ 'components.info.steps.downloadTitle' | transloco }}
+                    </h2>
+                    <br>
+                    <p>{{ 'components.info.steps.downloadParagraph' | transloco }}</p>
+                  </ion-label>
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
