--- a/front/src/app/components/youtube-downloader-info/youtube-downloader-info/youtube-downloader-info.component.html
+++ b/front/src/app/components/youtube-downloader-info/youtube-downloader-info/youtube-downloader-info.component.html
@@ -15,7 +15,7 @@
           <ion-card>
             <ion-card-content>
               <ion-row>
-                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                <ion-col size-lg="3" size-md="3" size-sm="6" size-xs="6" class="ion-text-center">
                   <ion-icon name="airplane-outline" color="primary" style="zoom: 4.0;"></ion-icon>
                   <ion-label>
                     <h2>
@@ -25,7 +25,7 @@
                     <p>{{ 'components.info.features.fastParagraph' | transloco }}</p>
                   </ion-label>
                 </ion-col>
-                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                <ion-col size-lg="3" size-md="3" size-sm="6" size-xs="6" class="ion-text-center">
                   <ion-icon name="card-outline" color="primary" style="zoom: 4.0"></ion-icon>
                   <ion-label>
                     <h2>
@@ -35,7 +35,7 @@
                     <p>{{ 'components.info.features.freeParagraph' | transloco }}</p>
                   </ion-label>
                 </ion-col>
-                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                <ion-col size-lg="3" size-md="3" size-sm="6" size-xs="6" class="ion-text-center">
                   <ion-icon name="desktop-outline" color="primary" style="zoom: 4.0"></ion-icon>
                   <ion-label>
                     <h2>
@@ -45,9 +45,19 @@
                     <p>{{ 'components.info.features.noSoftwareParagraph' | transloco }}</p>
                   </ion-label>
                 </ion-col>
+                <ion-col size-lg="3" size-md="3" size-sm="6" size-xs="6" class="ion-text-center">
+                  <ion-icon name="cloud-upload-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                  <ion-label>
+                    <h2>
+                      {{ 'components.info.features.uploadTitle' | transloco }}
+                    </h2>
+                    <br>
+                    <p>{{ 'components.info.features.uploadParagraph' | transloco }}</p>
+                  </ion-label>
+                </ion-col>
               </ion-row>
               <ion-row class="ion-align-items-center">
-                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                <ion-col size-lg="3" size-md="3" size-sm="6" size-xs="6" class="ion-text-center">
                   <ion-icon name="search-outline" color="primary" style="zoom: 4.0"></ion-icon>
                   <ion-label>
                     <h2>
@@ -57,7 +67,7 @@
                     <p>{{ 'components.info.steps.selectVideoParagraph' | transloco }}</p>
                   </ion-label>
                 </ion-col>
-                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                <ion-col size-lg="3" size-md="3" size-sm="6" size-xs="6" class="ion-text-center">
                   <ion-icon name="clipboard-outline" color="primary" style="zoom: 4.0"></ion-icon>
                   <ion-label>
                     <h2>
@@ -67,7 +77,7 @@
                     <p>{{ 'components.info.steps.pasteLinkParagraph' | transloco }}</p>
                   </ion-label>
                 </ion-col>
-                <ion-col size-lg="4" size-md="4" size-sm="6" size-xs="6" class="ion-text-center">
+                <ion-col size-lg="3" size-md="3" size-sm="6" size-xs="6" class="ion-text-center">
                   <ion-icon name="cloud-download-outline" color="primary" style="zoom: 4.0"></ion-icon>
                   <ion-label>
                     <h2>
@@ -75,6 +85,16 @@
                     </h2>
                     <br>
                     <p>{{ 'components.info.steps.downloadParagraph' | transloco }}</p>
+                  </ion-label>
+                </ion-col>
+                <ion-col size-lg="3" size-md="3" size-sm="6" size-xs="6" class="ion-text-center">
+                  <ion-icon name="globe-outline" color="primary" style="zoom: 4.0"></ion-icon>
+                  <ion-label>
+                    <h2>
+                      {{ 'components.info.steps.uploadTitle' | transloco }}
+                    </h2>
+                    <br>
+                    <p>{{ 'components.info.steps.uploadParagraph' | transloco }}</p>
                   </ion-label>
                 </ion-col>
               </ion-row>
