✨  Added more options component

--- a/front/src/app/home/home.page.html
+++ b/front/src/app/home/home.page.html
@@ -10,6 +10,11 @@
             <ion-button fill="clear" (click)="onClickBuyMeCoffeeHandler()">
                 <img src="https://www.buymeacoffee.com/assets/img/custom_images/yellow_img.png" alt="Buy Me A Coffee" style="width:100px">
             </ion-button>
+            <!--
+            <ion-button fill="clear" (click)="presentMoreOptionsPopover($event)">
+                <ion-icon slot="icon-only" name="ellipsis-vertical"></ion-icon>
+            </ion-button>
+            -->
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
