--- a/front/src/app/components/more-options/more-options/more-options.component.html
+++ b/front/src/app/components/more-options/more-options/more-options.component.html
@@ -1,3 +1,8 @@
-<p>
-  more-options works!
-</p>
+<ion-list>
+  <ng-container *ngFor="let option of options">
+    <ion-item *ngIf="option.show" lines="none" button (click)="onClickOptionHandler(option.type)">
+      <ion-icon [name]="option.icon" slot="start"></ion-icon>
+      {{ option.text }}
+    </ion-item>
+  </ng-container>
+</ion-list>
