--- a/front/src/app/components/copyright-claims/copyright-claims/copyright-claims.component.html
+++ b/front/src/app/components/copyright-claims/copyright-claims/copyright-claims.component.html
@@ -1,3 +1,10 @@
-<p>
-  copyright-claims works!
-</p>
+<ion-content class="ion-padding">
+  <ion-item lines="none">
+    <ion-label class="ion-text-wrap ion-text-center">
+      <h1>{{ 'components.copyrightClaims.title' | transloco }}</h1>
+    </ion-label>
+  </ion-item>
+  <ion-item lines="none">
+    <ion-label class="ion-text-wrap" [innerHtml]="copyrightClaims"></ion-label>
+  </ion-item>
+</ion-content>
